cmd/nostr-bridge/examples/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nostr-bridge
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nostr-bridge
  ports:
    - {name: http, port: 8080, targetPort: http}
